--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./node_modules/eslint/bin/eslint.js lib --fix && node ./node_modules/mocha/bin/mocha --recursive"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.5",
     "mocha": "^5.0.1",
+    "node": "^9.5.0",
     "should": "^13.2.1"
+  },
+  "devDependencies": {
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.9.0"
   }
 }
