--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.17.5",
     "mocha": "^5.0.1",
     "node": "^9.5.0",
     "should": "^13.2.1"
